# tag-track

./: .eslintignore  .gitignore  Cargo.toml  LICENSE  README.md  action.yml  build.rs  example  install.ps1  install.sh  main.rs.old  package-lock.json  package.json  track.yaml  tsconfig.json
.github/: release_notes.template
.github/workflows/: build_lint.yml  build_lint_test.yml  issues.yml  release.yml  research.yml  tag.yml  tag_release.yml  test_workflow.yml
action/: .prettierrc.json  index.ts  package-lock.json  package.json  tsconfig.json
action/src/: index.ts
src/: config.rs  error.rs  git.rs  main.rs  main.rs.old  parsing.rs  version.rs
src/source/: git.rs  github.rs  mod.rs
