[package]
name = "tag-track"
version = "0.0.0+git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
enum_dispatch = "0.3.12"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json", "blocking", "native-tls-vendored"] }
semver = "1.0.18"
serde = { version = "1.0.183", features = ["derive"] }
